[workspace]
members = [
    "apk",
    "appbundle",
    "appimage",
    "mvn",
    "msix",
    "pri",
    "xbuild",
    "xcommon",
]
default-members = ["xbuild"]
exclude = ["examples"]

[patch.crates-io]
apple-codesign = { git = "https://github.com/dvc94ch/apple-platform-rs", branch = "appstoreconnect" }
