[workspace]
members = [
    "apk",
    "appbundle",
    "appimage",
    "mvn",
    "msix",
    "pri",
    "xbuild",
    "xcommon",
]
default-members = ["xbuild"]
exclude = ["examples"]

[workspace.dependencies]
anyhow = "1.0.95"
base64 = "0.20.0"
dunce = "1.0.5"
log = "0.4.20"
plist = "1.7.0"
quick-xml = { version = "0.26.0", features = ["serialize"] }
serde = { version = "1.0.217", features = ["derive"] }
tracing = { version = "0.1.41", default-features = false }
tracing-log = "0.1.4"
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["env-filter"]} 
zip = { version = "0.6.6", default-features = false }