[workspace]
members = [
    "apk",
    "appbundle",
    "appimage",
    "mvn",
    "msix",
    "pri",
    "xbuild",
    "xcommon",
]
default-members = ["xbuild"]
exclude = ["examples"]

[workspace.dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
byteorder = "1.5.0"
dunce = "1.0.5"
log = "0.4.20"
plist = "1.7.0"
quick-xml = { version = "0.26.0", features = ["serialize"] }
rasn = "0.22.0"
rasn-cms = "0.22.0"
rasn-pkix = "0.22.0"
rsa = { version = "0.9.7", features=["pem"] }
serde = { version = "1.0.217", features = ["derive"] }
sha2 = "0.10.8"
tracing = { version = "0.1.41", default-features = false }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["env-filter"]} 
zip = { version = "0.6.6", default-features = false }