[package]
name = "apk"
version = "0.4.0"
edition = "2021"
description = "Library for creating and signing apks."
repository = "https://github.com/rust-mobile/xbuild"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = "1.0.95"
byteorder = "1.5.0"
quick-xml = { version = "0.26.0", features = ["serialize"] }
rasn = "0.6.1"
rasn-pkix = "0.6.0"
roxmltree = "0.16.0"
rsa = "0.7.2"
serde = { version = "1.0.217", features = ["derive"] }
sha2 = { version = "0.10.8", features = ["oid"] }
tracing = "0.1.41"
xcommon = { version = "0.3.0", path = "../xcommon" }
zip = { version = "0.6.6", default-features = false }

[dev-dependencies]
tracing-log = "0.1.4"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
