[package]
name = "apk"
version = "0.4.0"
edition = "2021"
description = "Library for creating and signing apks."
repository = "https://github.com/rust-mobile/xbuild"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = { workspace = true }
byteorder = "1.5.0"
quick-xml = { workspace = true }
rasn = "0.6.1"
rasn-pkix = "0.6.0"
roxmltree = "0.16.0"
rsa = "0.7.2"
serde = { workspace = true }
sha2 = { version = "0.10.8", features = ["oid"] }
tracing = { workspace = true }
xcommon = { version = "0.3.0", path = "../xcommon" }
zip = { workspace = true }

[dev-dependencies]
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
