[package]
name = "apk"
version = "0.4.0"
edition = "2021"
description = "Library for creating and signing apks."
repository = "https://github.com/rust-mobile/xbuild"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = { workspace = true }
byteorder = { workspace = true }
quick-xml = { workspace = true }
rasn = { workspace = true }
rasn-pkix = { workspace = true }
roxmltree = "0.20.0"
rsa = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true, features = ["oid"] }
tracing = { workspace = true }
xcommon = { version = "0.3.0", path = "../xcommon" }
zip = { workspace = true }

[dev-dependencies]
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
