[package]
name = "appbundle"
version = "0.3.0"
edition = "2021"
description = "Library for creating and signing appbundles."
repository = "https://github.com/rust-mobile/xbuild"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = { workspace = true }
apple-codesign = "0.29.0"
app-store-connect = { workspace = true }
icns = "0.3.1"
log = { workspace = true }
pkcs8 = "0.10.2"
plist = { workspace = true }
rasn = { workspace = true }
rasn-cms = { workspace = true }
serde = { workspace = true }
x509-certificate = "0.24.0"
xcommon = { version = "0.3.0", path = "../xcommon" }
