[package]
name = "appimage"
version = "0.4.0"
edition = "2021"
description = "Library for creating and signing appimages."
repository = "https://github.com/rust-mobile/xbuild"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = { workspace = true }
xcommon = { version = "0.3.0", path = "../xcommon" }
