[package]
name = "mvn"
version = "0.1.0"
edition = "2021"
description = "Library for fetching and resolving maven dependencies."
repository = "https://github.com/cloudpeers/x"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = "1.0.55"
log = "0.4.14"
pubgrub = "0.2.1"
quick-xml = { version = "0.23.0-alpha2", features = ["serialize"] }
serde = { version = "1.0.136", features = ["derive"] }
