[package]
name = "msix"
version = "0.4.0"
edition = "2021"
description = "Library for creating and signing msix packages."
repository = "https://github.com/rust-mobile/xbuild"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
byteorder = "1.5.0"
mime_guess = "2.0.5"
quick-xml = { workspace = true }
rasn = "0.6.1"
rasn-cms = "0.6.0"
rasn-pkix = "0.6.0"
serde = { workspace = true }
sha2 = "0.10.8"
xcommon = { version = "0.3.0", path = "../xcommon" }
zip = { workspace = true }

[dev-dependencies]
der-parser = "8.2.0"
rsa = "0.7.2"
