[package]
name = "mvn"
version = "0.2.0"
edition = "2021"
description = "Library for fetching and resolving maven dependencies."
repository = "https://github.com/rust-mobile/xbuild"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
pubgrub = "0.2.1"
quick-xml = { workspace = true }
serde = { workspace = true }
xcommon = { version = "0.3.0", path = "../xcommon" }
