[package]
name = "xbuild"
version = "0.2.0"
edition = "2021"
description = "Builds rust mobile/desktop projects."
repository = "https://github.com/rust-mobile/xbuild"
license = "Apache-2.0 OR MIT"

[dependencies]
android-sdkmanager-rs = "0.5.0"
anyhow = "1.0.68"
apk = { version = "0.4.0", path = "../apk" }
appbundle = { version = "0.3.0", path = "../appbundle" }
appimage = { version = "0.4.0", path = "../appimage" }
apple-dmg = "0.2.0"
app-store-connect = "0.1.0"
base64 = "0.20.0"
clap = { version = "4.0.30", features = ["derive"] }
console = "0.15.2"
dirs = "4.0.0"
dunce = "1.0.3"
futures = "0.3.25"
glob = "0.3.0"
indicatif = "0.17.2"
log = "0.4.17"
log-panics = "2.1.0"
msix = { version = "0.4.0", path = "../msix" }
mvn = { version = "0.2.0", path = "../mvn" }
path-slash = "0.2.1"
plist = "1.3.1"
quick-xml = { version = "0.26.0", features = ["serialize"] }
reqwest = { version = "0.11.13", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_yaml = "0.9.16"
shlex = "1"
symlink = "0.1.0"
tar = "0.4.38"
toml = "0.5.10"
tracing = { version = "0.1.37", default-features = false }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["env-filter", "fmt"] }
which = "4.3.0"
xcommon = { version = "0.3.0", path = "../xcommon" }
zip = { version = "0.6.3", default-features = false }
zstd = "0.12.1"

[[bin]]
name = "x"
path = "src/main.rs"
