[package]
name = "xcli"
version = "0.1.0"
edition = "2021"

[dependencies]
android-sdkmanager-rs = "0.5.0"
anyhow = "1.0.53"
appbundle = { version = "0.1.0", path = "../appbundle" }
clap = { version = "3.0.13", features = ["derive"] }
dunce = "1.0.2"
env_logger = "0.9.0"
futures = "0.3.21"
glob = "0.3.0"
jsonrpsee = { version = "0.9.0", features = ["ws-client"] }
log = "0.4.14"
maven = { version = "0.1.0", path = "../maven" }
reqwest = { version = "0.11.9", features = ["blocking"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"
symlink = "0.1.0"
tar = { git = "https://github.com/dvc94ch/tar-rs", branch = "append-entry" }
toml = "0.5.8"
which = "4.2.4"
xapk = { version = "0.1.0", path = "../apk" }
xappimage = { version = "0.1.0", path = "../appimage" }
xcommon = { version = "0.1.0", path = "../xcommon" }
xmsix = { version = "0.1.0", path = "../msix" }
zstd = "0.10.0"

[[bin]]
name = "x"
path = "src/main.rs"
