[package]
name = "xcommon"
version = "0.3.0"
edition = "2021"
description = "Utilities for x."
repository = "https://github.com/rust-mobile/xbuild"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = "1.0.95"
byteorder = "1.5.0"
dunce = "1"
image = { version = "0.24.9", default-features = false, features = ["png", "webp"] }
pem = "1.1.1"
rasn = "0.6.1"
rasn-pkix = "0.6.0"
rsa = "0.7.2"
sha2 = { version = "0.10.8", features = ["oid"] }
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
