[package]
name = "xcommon"
version = "0.3.0"
edition = "2021"
description = "Utilities for x."
repository = "https://github.com/rust-mobile/xbuild"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = { workspace = true }
byteorder = { workspace = true }
dunce = { workspace = true }
image = { version = "0.24.9", default-features = false, features = ["png", "webp"] }
pem = "1.1.1"
rasn = { workspace = true }
rasn-pkix = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true, features = ["oid"] }
zip = { workspace = true, features = ["deflate"] }
