[package]
name = "raqote-winit"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2021"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
env_logger = "0.9"
euclid = "0.22"
log = "0.4"
pixels = { git = "https://github.com/parasyte/pixels", branch = "main" }
raqote = { git = "https://github.com/jrmuizel/raqote", default-features = false }
winit = "0.26.1"
winit_input_helper = "0.11"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = { version = "0.6.1", features = ["logger"] }

[patch.crates-io]
cc = { git = "https://github.com/dvc94ch/cc-rs", branch = "avoid-xrun" }
winit = { git = "https://github.com/rust-windowing/winit" }
