[package]
name = "template"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.66"
dioxus = { git = "https://github.com/dioxuslabs/dioxus" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
dioxus-desktop = { git = "https://github.com/dioxuslabs/dioxus" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11.1"
log = "0.4.17"
ndk-context = "0.1.1"
paste = "1.0.9"
wry = { version = "0.22.0", git = "https://github.com/tauri-apps/wry", branch = "release" }

[patch.'https://github.com/tauri-apps/tao']
tao = { git = "https://github.com/dvc94ch/tao", branch = "master" }
